--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
     "material-ui-dropzone": "^3.5.0",
@@ -60,6 +57,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "redux-mock-store": "^1.5.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "axios-mock-adapter": "^1.19.0"
   }
 }
