--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
-    "coverage": "npm test src -- --coverage"
+    "coverage": "npm test -- --coverage --watchAll=false"
   },
   "husky": {
     "hooks": {
@@ -53,17 +53,17 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
-    "redux-mock-store": "^1.5.4",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "axios-mock-adapter": "^1.19.0"
+    "redux-mock-store": "^1.5.4"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -78,7 +78,8 @@
       }
     },
     "coverageReporters": [
-      "text"
+      "text",
+      "html"
     ]
   }
 }
